--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,20 @@
     <GridView
         android:id="@+id/gv_movies"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:numColumns="auto_fit" />
 
+    <!-- Custom error view to show error messages like no network or results found -->
+    <com.example.android.popularmovies.view.ErrorView
+        android:id="@+id/ev_popular_movies"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+
+    <!-- Progress bar to indicate the user that the movies are being loaded -->
+    <ProgressBar
+        android:id="@+id/pb_loading_movies"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
 </FrameLayout>
