feat(): movie detail functional

--- a/app/src/main/res/layout/movie_grid_item.xml
+++ b/app/src/main/res/layout/movie_grid_item.xml
@@ -24,6 +24,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:contentDescription="@string/content.description.moviePoster"
-        android:scaleType="fitXY" />
+        android:contentDescription="@string/content.description.moviePoster" />
+
 </com.example.android.popularmovies.util.PosterView>
