--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -53,7 +53,7 @@
                 android:layout_height="100dp"
                 android:background="@color/colorAccentAlt"
                 android:gravity="center_vertical"
-                android:padding="8dp" />
+                android:padding="@dimen/padding_half" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -62,8 +62,8 @@
 
                 <ImageView
                     android:id="@+id/iv_movie_poster"
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
+                    android:layout_width="@dimen/poster_detail_width"
+                    android:layout_height="@dimen/poster_detail_height"
                     android:contentDescription="@string/content.description.moviePoster"
                     android:scaleType="fitCenter" />
 
@@ -74,6 +74,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignTop="@+id/iv_movie_poster"
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                     android:layout_toEndOf="@+id/iv_movie_poster"
                     android:layout_toRightOf="@+id/iv_movie_poster"
                     android:ellipsize="end"
@@ -86,6 +87,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_release_date"
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                     android:layout_toEndOf="@+id/iv_movie_poster"
                     android:layout_toRightOf="@+id/iv_movie_poster"
                     android:ellipsize="end"
@@ -102,8 +104,8 @@
                 android:layout_marginTop="@dimen/padding_half" />
 
             <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="@dimen/movie_db_watermark_width"
+                android:layout_height="@dimen/movie_db_watermark_height"
                 android:layout_gravity="center"
                 android:contentDescription="@string/content.description.movieDb"
                 android:padding="@dimen/activity_horizontal_margin"
