--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.popularmovies.ui.MainActivity">
+    tools:context="com.example.android.popularmovies.ui.movies.MoviesActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
