--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,8 +20,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="padding_half">8dp</dimen>
 
-    <dimen name="poster_width">780px</dimen>
-    <dimen name="poster_height">1170px</dimen>
+    <dimen name="poster_width">150dp</dimen>
+    <dimen name="poster_height">250dp</dimen>
     <dimen name="poster_detail_width">200dp</dimen>
     <dimen name="poster_detail_height">200dp</dimen>
     <dimen name="movie_db_watermark_width">100dp</dimen>
