--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_show_favourites"
+        android:orderInCategory="1"
+        android:title="@string/action.menu.showFavourites"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_order_by_most_popular"
         android:orderInCategory="1"
         android:title="@string/action.menu.orderByMostPopular"
