--- a/app/src/main/res/layout/layout_movie_detail.xml
+++ b/app/src/main/res/layout/layout_movie_detail.xml
@@ -7,6 +7,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <include layout="@layout/layout_card_movie_detail" />
     </android.support.v7.widget.CardView>
 
@@ -22,6 +23,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_horizontal_margin">
+
         <include layout="@layout/layout_card_movie_reviews" />
     </android.support.v7.widget.CardView>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/activity_horizontal_margin" />
 </LinearLayout>
