--- a/app/src/main/res/layout/layout_card_movie_reviews.xml
+++ b/app/src/main/res/layout/layout_card_movie_reviews.xml
@@ -10,7 +10,8 @@
         android:id="@+id/tv_label_reviews"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/padding_half"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:text="@string/label_reviews"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textSize="18sp" />
