--- a/app/src/main/res/layout/layout_card_movie_trailers.xml
+++ b/app/src/main/res/layout/layout_card_movie_trailers.xml
@@ -2,9 +2,9 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_marginLeft="@dimen/activity_horizontal_margin"
-    android:layout_marginRight="@dimen/activity_horizontal_margin"
-    android:layout_height="match_parent">
+    android:layout_marginRight="@dimen/activity_horizontal_margin">
 
     <TextView
         android:id="@+id/tv_label_trailers"
@@ -23,13 +23,14 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <android.support.v4.view.ViewPager
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/pager_trailers"
         android:layout_width="0dp"
         android:layout_height="@dimen/pager_height"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginTop="8dp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_label_trailers" />
