feat(): show movie detail in two pane mode

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,4 +31,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="card_margin_top">8dp</dimen>
     <dimen name="pager_height">150dp</dimen>
+    <dimen name="fragment_detail_width">450dp</dimen>
 </resources>
