--- a/app/src/main/res/layout-sw600dp-land/trailer_item.xml
+++ b/app/src/main/res/layout-sw600dp-land/trailer_item.xml
@@ -24,7 +24,8 @@
         android:id="@+id/iv_thumbnail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:contentDescription="@string/content_description_video" />
 
     <TextView
         android:id="@+id/tv_video_title"
